--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.19.0",
+    "muse-ui": "^3.0.2",
+    "muse-ui-message": "^0.2.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
