--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "html2canvas": "^1.0.0-rc.5",
     "muse-ui": "^3.0.2",
     "muse-ui-message": "^0.2.1",
+    "muse-ui-toast": "^0.3.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
